update: click event

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/html.html",
+    "livePreview.defaultPreviewPath": "/Sliding Effects/index.html",
     "cmake.configureOnOpen": false
 }
