--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/Sliding Effects/index.html",
+    "livePreview.defaultPreviewPath": "/Don't Hover 2/index.html",
     "cmake.configureOnOpen": false
 }
