--- a/Pokemon API Practice/game/package.json
+++ b/Pokemon API Practice/game/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "random.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
